--- a/package.yaml
+++ b/package.yaml
@@ -22,7 +22,14 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - http-conduit
+- http-client
+- http-client-tls
 - directory
+- yaml
+- aeson
+- bytestring
+- conduit
+
 
 library:
   source-dirs: src
